--- a/MANIMath/MANIMath_WebUI/templates/shared/layout.html
+++ b/MANIMath/MANIMath_WebUI/templates/shared/layout.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" />
         <link rel="stylesheet" type="text/css" href="{% static 'css/layout.css' %}" />
         <link rel="stylesheet" type="text/css" href="{% static 'css/site.css' %}" />
+        <link rel="stylesheet" type="text/css" href="{% static 'fontawesomefree/css/all.min.css' %}">
     </head>
 
     <body>
