--- a/MANIMath/MANIMath_WebUI/templates/shared/layout.html
+++ b/MANIMath/MANIMath_WebUI/templates/shared/layout.html
@@ -15,7 +15,7 @@
     <body>
         {% include 'partials/_header.html' %}
 
-        <div class="main">
+        <div class="main lighhtmode">
             {% block content %}{% endblock %}
         </div>
 
