--- a/MANIMath/MANIMath_Account/templates/MANIMath_Account/login.html
+++ b/MANIMath/MANIMath_Account/templates/MANIMath_Account/login.html
@@ -5,7 +5,31 @@
 <div class="container">
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+
+        <div class="form-group mr-1 mb-1">
+            {{ form.username.label_tag }}
+            {{ form.username }}
+            {% if form.username.errors %}
+            <ul class="errorlist">
+                {% for error in form.username.errors %}
+                <li>{{ error }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+        </div>
+
+        <div class="form-group mr-1 mb-1">
+            <p class="mr-1">{{ form.password.label_tag }}</p>
+            <p>{{ form.password }}</p>
+            {% if form.password.errors %}
+            <ul class="errorlist">
+                {% for error in form.password.errors %}
+                <li>{{ error }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+        </div>
+
         <button type="submit">Login</button>
     </form>
 </div>
