Add _background.html partial view for displaying animated GIF

--- a/MANIMath/MANIMath_WebUI/static/css/layout.css
+++ b/MANIMath/MANIMath_WebUI/static/css/layout.css
@@ -63,6 +63,16 @@ a, a:after {
         color: var(--text-highlight-color)
     }
 
+.background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1000;
+    overflow: hidden;
+}
+
 /************** Common **************/
 
 
@@ -80,6 +90,7 @@ a, a:after {
     background: rgba( 0, 0, 0, 0.3 );
     backdrop-filter: blur( 2px );
 }
+
 .navbar_right {
     display: flex;
     justify-content: flex-start;
