--- a/MANIMath/MANIMath_WebUI/templates/shared/layout.html
+++ b/MANIMath/MANIMath_WebUI/templates/shared/layout.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{{ title }} - MANIMath</title>
-        {% load static %}
-        <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" />
-        <link rel="stylesheet" type="text/css" href="{% static 'css/layout.css' %}" />
-        <link rel="stylesheet" type="text/css" href="{% static 'css/site.css' %}" />
-        <link rel="stylesheet" type="text/css" href="{% static 'fontawesomefree/css/all.min.css' %}">
-    </head>
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{ title }} - MANIMath</title>
+    {% load static %}
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/layout.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/site.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/account.css' %}" />
+    <link rel="stylesheet" type="text/css" href="{% static 'fontawesomefree/css/all.min.css' %}">
+</head>
 
     <body>
         {% include 'partials/_header.html' %}
