--- a/MANIMath/MANIMath_Account/templates/MANIMath_Account/register.html
+++ b/MANIMath/MANIMath_Account/templates/MANIMath_Account/register.html
@@ -2,60 +2,64 @@
 
 {% block content %}
 
-<div class="container">
-    <form method="post">
-        {% csrf_token %}
+{% include 'partials/_background.html' %}
 
-        <div class="form-group">
-            {{ form.username.label_tag }}
-            {{ form.username }}
-            {% if form.username.errors %}
-            <ul class="errorlist">
-                {% for error in form.username.errors %}
-                <li>{{ error }}</li>
-                {% endfor %}
-            </ul>
-            {% endif %}
-        </div>
+<div class="container d-flex justify-content-center login_container">
+    <div class="account_group">
+        <form method="post" style="width:100%">
+            {% csrf_token %}
+            <div class="form-group">
+                <p class="account_form_label">{{ form.username.label_tag }}</p>
+                <p class="account_form_input">{{ form.username }}</p>
+                {% if form.username.errors %}
+                <ul class="validation_error">
+                    {% for error in form.username.errors %}
+                    <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+            </div>
 
-        <div class="form-group">
-            {{ form.email.label_tag }}
-            {{ form.email }}
-            {% if form.email.errors %}
-            <ul class="errorlist">
-                {% for error in form.email.errors %}
-                <li>{{ error }}</li>
-                {% endfor %}
-            </ul>
-            {% endif %}
-        </div>
+            <div class="form-group">
+                <p class="account_form_label">{{ form.email.label_tag }}</p>
+                <p class="account_form_input">{{ form.email }}</p>
+                {% if form.email.errors %}
+                <ul class="validation_error">
+                    {% for error in form.email.errors %}
+                    <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+            </div>
 
-        <div class="form-group">
-            {{ form.password1.label_tag }}
-            {{ form.password1 }}
-            {% if form.password1.errors %}
-            <ul class="errorlist">
-                {% for error in form.password1.errors %}
-                <li>{{ error }}</li>
-                {% endfor %}
-            </ul>
-            {% endif %}
-        </div>
+            <div class="form-group">
+                <p class="account_form_label">{{ form.password1.label_tag }}</p>
+                <p class="account_form_input">{{ form.password1 }}</p>
+                {% if form.password1.errors %}
+                <ul class="validation_error">
+                    {% for error in form.password1.errors %}
+                    <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+            </div>
 
-        <div class="form-group">
-            {{ form.password2.label_tag }}
-            {{ form.password2 }}
-            {% if form.password2.errors %}
-            <ul class="errorlist">
-                {% for error in form.password2.errors %}
-                <li>{{ error }}</li>
-                {% endfor %}
-            </ul>
-            {% endif %}
-        </div>
+            <div class="form-group">
+                <p class="account_form_label">{{ form.password2.label_tag }}</p>
+                <p class="account_form_input">{{ form.password2 }}</p>
+                {% if form.password2.errors %}
+                <ul class="validation_error">
+                    {% for error in form.password2.errors %}
+                    <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+                {% endif %}
+            </div>
 
-        <button type="submit">Register</button>
-    </form>
+            <button class="account_form_button" type="submit">Register</button>
+        </form>
+    </div>
+
 </div>
 
 {% endblock %}
