--- a/MANIMath/MANIMath_WebUI/templates/partials/_header.html
+++ b/MANIMath/MANIMath_WebUI/templates/partials/_header.html
@@ -26,7 +26,39 @@
                     </ul>
                 </div>
                 <div class="navbar_left">
+                    <form class="navbar-search mx-1">
+                        <input name="q" class="form-control form-control-dark" placeholder="Search..."
+                               value="{{ query }}">
+                    </form>
 
+                    <div class="navbar_account">
+                        <a class="btn btn-outline-light navbar_login_btn" href="{% url 'login' %}">Login</a>
+                        <a class="btn btn-outline-light navbar_signup_btn" href="{% url 'register' %}">Sign-up</a>
+                    </div>
+                    <div class="navbar-dropdown">
+                        <span class="btn navbar-dropdown dropdown-toggle" data-bs-toggle="dropdown"
+                              aria-haspopup="true" aria-expanded="false">
+                        </span>
+                        <div class="dropdown-menu dropdown-menu-navbar dropdown-menu-end">
+                            <h5 class="dropdown-text">Social</h5>
+                            <div role="separator" class="dropdown-divider"></div>
+                            <div class="social-panel">
+                                <span>
+                                    <a href="https://github.com/unsulliedd"><i class="social-icon fab fa-github"></i></a>
+                                </span>
+                                <span>
+                                    <a href="https://twitter.com"><i class="social-icon fab fa-twitter"></i></a>
+                                </span>
+                                <span>
+                                    <a href="https://facebook.com"><i class="social-icon fab fa-facebook"></i></a>
+                                </span>
+                                <span>
+                                    <a href="https://youtube.com"><i class="social-icon fab fa-youtube"></i></a>
+                                </span>
+                            </div>
+                            <div role="separator" class="dropdown-divider"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
