Add dark mode script and dark mode button to navbar

--- a/MANIMath/MANIMath_WebUI/templates/partials/_header.html
+++ b/MANIMath/MANIMath_WebUI/templates/partials/_header.html
@@ -57,6 +57,11 @@
                                 </span>
                             </div>
                             <div role="separator" class="dropdown-divider"></div>
+                            <div class="tools-panel">
+                                <a class="dark-mode-toggle" id="dark-mode-toggle" style="font-size: 24px" href="#">
+                                    <i class="fa-solid fa-moon"></i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
