--- a/MANIMath/MANIMath_WebUI/static/css/layout.css
+++ b/MANIMath/MANIMath_WebUI/static/css/layout.css
@@ -207,4 +207,12 @@ a, a:after {
         -webkit-text-fill-color: transparent;
     }
 
+.tools-panel {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    justify-content: space-evenly;
+    align-items: center;
+}
 /************** Navbar **************/
