--- a/MANIMath/MANIMath_Account/static/css/account.css
+++ b/MANIMath/MANIMath_Account/static/css/account.css
@@ -81,3 +81,56 @@ input[type="checkbox"] {
     list-style: none;
     padding: 0;
 }
+
+
+/*********************** navbarProfile ***********************/
+
+.navbar_user {
+    display: flex;
+    font-weight: 400;
+    border: 1px solid;
+    border-radius: 5px;
+    padding: 0.25rem 0.5rem;
+    color: wheat;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+}
+
+.navbar_username {
+    color: wheat
+}
+
+.navbar_avatar {
+    margin-left: 8px;
+    overflow: hidden;
+    height: 32px;
+    width: 32px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.dropdown_profile {
+    font-size: 16px;
+    width: 12rem;
+}
+
+.dropdown-menu-navbar {
+    background: linear-gradient(to right, #8e9eab, #eef2f3);
+    border: 5px;
+    border-radius: 5px;
+    min-width: 12rem;
+}
+
+.dropdown-item {
+    border-radius: 5px;
+    border: hidden;
+    margin: 2px
+}
+
+    .dropdown-item:hover {
+        background: linear-gradient(to right, #000000, #434343);
+        color: white;
+        padding: 4px 15px 4px 15px;
+        width: 186px;
+    }
