Update navbarUser style

--- a/MANIMath/MANIMath_Account/static/css/account.css
+++ b/MANIMath/MANIMath_Account/static/css/account.css
@@ -95,10 +95,12 @@ input[type="checkbox"] {
     flex-direction: row;
     flex-wrap: nowrap;
     align-items: center;
+    cursor: pointer;
 }
 
 .navbar_username {
-    color: wheat
+    color: wheat;
+    cursor: pointer;
 }
 
 .navbar_avatar {
@@ -108,6 +110,7 @@ input[type="checkbox"] {
     width: 32px;
     border-radius: 50%;
     object-fit: cover;
+    cursor: pointer;
 }
 
 .dropdown_profile {
@@ -120,6 +123,10 @@ input[type="checkbox"] {
     border: 5px;
     border-radius: 5px;
     min-width: 12rem;
+}
+
+.dropdown-toggle::after {
+    content: none;
 }
 
 .dropdown-item {
