--- a/MANIMath/MANIMath_Account/static/css/account.css
+++ b/MANIMath/MANIMath_Account/static/css/account.css
@@ -31,6 +31,7 @@
     padding: 8px;
     box-sizing: border-box;
     outline: 0;
+    filter: brightness(1.8);
 }
 
     .account_form_input input:focus {
