Updated src attribute of the logo image to use the static template tag

--- a/MANIMath/MANIMath_WebUI/templates/partials/_header.html
+++ b/MANIMath/MANIMath_WebUI/templates/partials/_header.html
@@ -2,7 +2,7 @@
     <nav id="navbar" class="navbar navbar-expand-md navbar-toggleable-sm">
         <div class="container">
             <a class="navbar-brand" style="color:wheat" href="{% url 'home' %}">
-                <img class="navbar-logo" src="../../static/media/img/MANIMath_logo.png" alt="">MANIMath
+                <img class="navbar-logo" src="{% static 'media/img/MANIMath_logo.png' %}" alt="">MANIMath
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
