Updated light theme style

--- a/MANIMath/MANIMath_WebUI/static/css/layout.css
+++ b/MANIMath/MANIMath_WebUI/static/css/layout.css
@@ -11,7 +11,7 @@
     --background-color-light: #f1f4f71f;
     --secondary-background-color-light: #52616B;
     --text-primary-color-light: #1E2022;
-    --text-highlight-light: wheat;
+    --text-highlight-light: red;
 
     /* Dark Theme */
     --background-color-dark: #222222;
