--- a/MANIMath/MANIMath_WebUI/templates/MANIMath_WebUI/topics.html
+++ b/MANIMath/MANIMath_WebUI/templates/MANIMath_WebUI/topics.html
@@ -29,14 +29,14 @@
     <div class="topic_list">
         {% for topic in topics %}
         <div class="card_wrapper">
-            <a href="#">
+            <a href="{% url 'topic_detail' topic.name %}">
                 <div class="topic_list_card card">
                     <div class="list_card_image">
                         <img class="card_img_top"
                              src="{{ topic.image_url }}" alt="{{ topic.name }}">
                     </div>
                     <div class="list_item_text">
-                        <h2 href="#">
+                        <h2 href="{% url 'topic_detail' topic.name %}">
                             {{ topic.name }}
                         </h2>
                     </div>
