Added 'create_animation' link to topic detail template

--- a/MANIMath/MANIMath_WebUI/templates/MANIMath_WebUI/details.html
+++ b/MANIMath/MANIMath_WebUI/templates/MANIMath_WebUI/details.html
@@ -34,7 +34,7 @@
                 </div>
             </div>
             <div class="detail_info_btn">
-                <a class="detail_create_btn btn" href="#">
+                <a class="detail_create_btn btn" href="{% url 'create_animation' topic_name=topic.name %}">
                     Create {{ topic.name }} Animation
                 </a>
             </div>
