--- a/MANIMath/MANIMath_WebUI/templates/MANIMath_WebUI/create_animation.html
+++ b/MANIMath/MANIMath_WebUI/templates/MANIMath_WebUI/create_animation.html
@@ -4,10 +4,10 @@
 
 <div class="container create_animation_main">
     <section class="create_form_section">
-       {% include 'partials/_animation_form'%}
+        {% include 'partials/_animation_form.html'%}
     </section>
     <section id="video-container" class="create_video_section">
-        {% include 'partials/_video_section'%}
+        {% include 'partials/_video_section.html'%}
     </section>
 </div>
 {% endblock %}
