--- a/MANIMath/MANIMath_WebUI/templates/MANIMath_WebUI/create_animation.html
+++ b/MANIMath/MANIMath_WebUI/templates/MANIMath_WebUI/create_animation.html
@@ -2,9 +2,22 @@
 
 {% block content %}
 
+{% include 'partials/_loading.html' %}
+
 <div class="container create_animation_main">
     <section class="create_form_section">
-        {% include 'partials/_animation_form.html'%}
+        <div>
+            <div>
+                <div>
+                    <h2>Create {{topic.name}} Animation</h2>
+                    <form id="animation-form" method="post" action="{% url 'create_animation' topic_name=topic.name %}">
+                        {% csrf_token %}
+                        {{form.as_p}}
+                        <button type="submit">Create</button>
+                    </form>
+                </div>
+            </div>
+        </div>
     </section>
     <section id="video-container" class="create_video_section">
         {% include 'partials/_video_section.html'%}
