Added API link to dropdown menu for superuser"

--- a/MANIMath/MANIMath_Account/templates/partials/_navbarProfile.html
+++ b/MANIMath/MANIMath_Account/templates/partials/_navbarProfile.html
@@ -14,6 +14,7 @@
         <a class="dropdown-item" href="#">History</a>
         {% if user.is_superuser %}
         <a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a>
+        <a class="dropdown-item" href="{% url 'api-root' %}">Api</a>
         {% endif %}
         <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
         <div role="separator" class="dropdown-divider"></div>
