Updated index.html page

--- a/MANIMath/MANIMath_WebUI/templates/MANIMath_WebUI/index.html
+++ b/MANIMath/MANIMath_WebUI/templates/MANIMath_WebUI/index.html
@@ -3,21 +3,31 @@
 {% block content %}
 
 <div class="container">
-    <p style="color:wheat">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec tristique sem. Cras ornare neque suscipit faucibus viverra. Nam scelerisque vulputate porttitor. In hac habitasse platea dictumst. Curabitur quis odio dolor. Donec vehicula rhoncus interdum. Integer sit amet urna tincidunt, feugiat nibh non, eleifend lorem. Etiam a magna vitae ex convallis porttitor eget a elit. Quisque gravida dolor mauris, at finibus purus imperdiet vitae. Fusce lobortis gravida massa, a porttitor nulla congue at.
-    </p>
-    <p style="color:wheat">
-        Cras odio tortor, luctus a lacinia a, interdum eu elit. Sed congue euismod dapibus. Nam fringilla pharetra consectetur. Vestibulum augue erat, accumsan ut gravida vitae, pellentesque consectetur sem. Nulla nec sapien et neque accumsan molestie. Fusce accumsan pharetra nibh eget luctus. Ut ullamcorper sapien blandit interdum tincidunt. Sed mattis eleifend quam, ut scelerisque neque luctus et. Nunc et rutrum nisi, et imperdiet augue.
-    </p>
-    <p style="color:wheat">
-        Nullam eu aliquet ligula. Donec nec molestie tortor. Vivamus egestas quam id magna feugiat iaculis. Aenean at dui pellentesque, venenatis dolor non, lobortis libero. Duis ut nisi ac justo molestie tristique. Curabitur posuere vitae risus in euismod. Proin sit amet velit eu leo blandit pellentesque. Vivamus et risus quis augue sodales varius. Nulla pulvinar lectus in erat cursus, ac condimentum augue interdum. Etiam eleifend mi nec consequat egestas. Nulla facilisis semper maximus. In semper imperdiet consequat. Vivamus a eros justo. Nullam condimentum fermentum sem vel interdum.
-    </p>
-    <p style="color:wheat">
-        Nulla commodo urna ut nisi lobortis, ac sollicitudin tellus fringilla. Morbi non dapibus neque, non dignissim augue. Etiam ornare eget ipsum in efficitur. Sed volutpat maximus dui, sodales auctor nisl accumsan vel. In congue risus a accumsan aliquam. Praesent eget facilisis mi, eu aliquam diam. Nam pretium sapien felis. Sed ac velit non arcu dapibus dignissim facilisis ut ipsum. Vivamus vel eleifend erat, at placerat ex. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-    </p>
-    <p style="color:wheat">
-        Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Vivamus commodo tellus a libero dictum, sit amet placerat ipsum rutrum. Donec hendrerit pretium scelerisque. Vestibulum pellentesque commodo quam id tincidunt. Proin sed risus quis urna pellentesque elementum. Maecenas id lorem vehicula magna pellentesque sagittis nec vitae est. Ut tempus lorem libero, nec dignissim ligula efficitur lacinia. Sed rhoncus quis ipsum sit amet vulputate. Donec eget nisl eu arcu volutpat commodo eu sed dolor.
-    </p>
+    <div class="d-flex">
+        <div>
+            <p style="color:wheat; white-space:pre-wrap">
+                Manim is a free and open-source Python library used for creating mathematical expressions, diagrams, and animations. Manim stands for "Mathematical Animation Engine." It was developed by Grant Sanderson, the creator of the popular YouTube channel 3Blue1Brown.
+            </p>
+            <p style="color:wheat">
+                Manim can be used for scientific presentations, educational videos, research projects, and interactive media. It is a powerful tool for visualizing mathematical expressions, theorems, and concepts. It is particularly favored for creating impressive animations to explain complex mathematical concepts.
+            </p>
+
+        </div>
+        <div>
+            <img style="width:256px; height:192px; transform: scale(1.5);" src="https://docs.manim.community/en/stable/_static/manim-logo-sidebar-dark.svg" />
+        </div>
+    </div>
+    <div>
+        <p style="color:wheat">
+            Manim is written in the Python programming language, and animations are created using a simple text-based scripting language. Users interact with it by writing Python code to manipulate scene objects, frames, animations, and transitions. Manim offers a range of features, including animating shapes and text, camera movements, object positioning on the scene, and creating coordinate systems and graphs.
+        </p>
+        <p style="color:wheat">
+            The flexibility of Manim allows users to create customized animations. Animations can be converted into videos or shown in real-time for live presentations. Manim is of great value to those who want to create educational content in fields such as mathematics, physics, computer science, and engineering.
+        </p>
+        <p style="color:wheat">
+            While Manim doesn't have a user-friendly interface, it has a large community and online documentation, examples, and tutorials are available. Additionally, there are high-level tools and libraries developed for Manim, making it more accessible for users.
+        </p>
+    </div>
 </div>
 
 {% endblock %}
